--- a/public/css/template.css
+++ b/public/css/template.css
@@ -34,7 +34,7 @@ body {
 
 #searchbox {
     display: grid;
-    grid-template-columns: 60px auto 60px;
+    grid-template-columns: 50px auto 50px;
     height: 30px;
 }
 
